--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -7,6 +7,8 @@ font = Inconsolata for Powerline 9
   palette = "#2d2d2d:#f2777a:#99cc99:#ffcc66:#6699cc:#cc99cc:#66cccc:#d3d0c8:#747369:#f2777a:#99cc99:#ffcc66:#6699cc:#cc99cc:#66cccc:#f2f0ec"
   foreground_color = "#515151"
   background_color = "#f2f0ec"
+  background_type = transparent
+  background_darkness = 0.87
   cursor_color = "#515151"
   font = "Fixed 16"
   borderless=True
